[package]
name = "caves"
version = "0.1.0"
authors = ["Sunjay Varma <varma.sunjay@gmail.com>"]
edition = "2018"

[dependencies]
specs = "*"
specs-derive = "*"
shred = "*"
shred-derive = "*"
rand = "0.6"
base64 = "0.11"
lazy_static = "1.4"
colored = "1.8"
rayon = "1.2"
component_group = "1.0"
rusttype = "0.8"

[dependencies.sdl2]
version = "*"
default-features = false
features = ["image"]
