[package]
name = "caves"
version = "0.1.0"
authors = ["Sunjay Varma <varma.sunjay@gmail.com>"]
edition = "2018"

[dependencies]
specs = "*"
specs-derive = "*"
shred = "*"
shred-derive = "*"
rand = "0.8"
base64 = "0.12"
lazy_static = "1.4"
colored = "1.9"
rayon = "1.3"
component_group = "1.0"
rusttype = "0.7"

[dependencies.sdl2]
version = "*"
default-features = false
features = ["image"]
