[package]
name = "caves"
version = "0.1.0"
authors = ["Sunjay Varma <varma.sunjay@gmail.com>"]
edition = "2018"

[dependencies]
specs = { version = "0.16.0", features=["specs-derive", "shred-derive"] }
rand = "0.7"
base64 = "0.13"
lazy_static = "1.4"
colored = "2.0"
rayon = "1.5"
component_group = "3.0.0"
rusttype = "0.7"

[dependencies.sdl2]
version = "*"
default-features = false
features = ["image"]
